# AKA-GOAT

./: .gitmodules  CMakeLists.txt  README.md  hashmap.h  main.cpp  requirements.txt
backend/: CMakeLists.txt
backend/include/: aka_goat.h  parse_csv.h  quick.h  soccerPlayer.h  tim.h
backend/src/: aka_goat.cpp  main.cpp  parse_csv.cpp  quick.cpp  soccerPlayer.cpp  tim.cpp
frontend/: package-lock.json  package.json
